--- a/package.json
+++ b/package.json
@@ -1,32 +1,21 @@
 {
-  "name": "express_mysql_base",
+  "name": "express_mysql_template",
   "version": "1.0.0",
-  "description": "TODO CRUD PRODUCTOS",
-  "main": "server.js",
-  "type": "module",
+  "description": "Plantilla API REST con ExpressJS y MySQL",
+  "main": "api.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --watch server"
+    "start": "node --watch src/api.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/IFCD0112-Grup-Cief-2024/express_mysql_base.git#main"
-  },
-  "keywords": [
-    "webserver",
-    "node",
-    "mysql"
-  ],
-  "author": "Grup CIEF - IFCD0112 - 2024",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/IFCD0112-Grup-Cief-2024/express_mysql_base/issues"
-  },
-  "homepage": "https://github.com/IFCD0112-Grup-Cief-2024/express_mysql_base/tree/main#readme",
   "dependencies": {
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "joi": "^17.13.3",
     "mysql2": "^3.11.3",
-    "uuid": "^10.0.0",
-    "validator": "^13.12.0"
+    "uuid": "^10.0.0"
   }
 }
